--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,21 @@
 {
     "compileOnSave": false,
     "compilerOptions": {
-        "allowJs": true,
+        "allowJs": false,
         "baseUrl": "src",
         "declaration": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "lib": [
-            "es2017"
-        ],
         "moduleResolution": "node",
         "noImplicitAny": false,
-        "outDir": "./dist/out-tsc",
-        "paths": {
-            "environments": [
-                "./environments"
-            ]
-        },
+        "outDir": "./dist",
         "sourceMap": true,
         "removeComments": false,
-        "target": "es2017",
+        "target": "es6",
         "typeRoots": [
             "node_modules/@types"
         ],
         "types": [
-            "node",
             "jest"
         ]
     },
