--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,6 +2,8 @@ environment:
   version_nodejs: "8"
 install:
   - ps: Install-Product node $env:version_nodejs x64
+  - ps: $env:package_version = (Get-Content -Raw -Path package.json | ConvertFrom-Json).version
+  - ps: Update-AppveyorBuild -Version "$env:package_version-$env:APPVEYOR_BUILD_NUMBER"
   - npm install
 test_script:
   - node --version
@@ -14,7 +16,13 @@ on_finish:
 on_success:
   - ./node_modules/.bin/codecov
 build: off
-version: "0.1.0-build.{build}"
 branches:
   only:
     - master
+deploy_script:
+  - ps: |
+      if ($ENV:APPVEYOR_REPO_TAG_NAME)
+      {
+        "//registry.npmjs.org/:_authToken=`$`{NPM_TOKEN}`}" | Out-File (Join-Path $ENV:APPVEYOR_BUILD_FOLDER ".npmrc") -Encoding UTF8
+        iex "npm publish --access public"
+      }
