--- a/package.json
+++ b/package.json
@@ -4,23 +4,28 @@
   "description": "A modern, lightweight dependency injection library inspired by JSR-303 and Spring.",
   "homepage": "https://github.com/rraziel/es-injection",
   "bugs": "https://github.com/rraziel/es-injection/issues",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/rraziel/es-injection.git"
   },
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc -p .",
+    "watch": "tsc --watch -p .",
     "test": "./node_modules/.bin/jest --watch --no-cache --verbose",
     "coverage": "./node_modules/.bin/jest --no-cache --coverage",
-    "tslint": "tslint --project ./tsconfig.json --config ./conf/tslint.json '**/*.ts' --exclude '**/node_modules/**'"
+    "tslint": "tslint --project ./tsconfig.json --config ./conf/tslint.json"
   },
   "jest": {
-    "mapCoverage": true,
     "collectCoverageFrom": [
       "src/**/*.ts",
       "!src/**/index.ts"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
     ],
     "moduleFileExtensions": [
       "ts",
@@ -45,7 +50,6 @@
     "jest": "22.1.4",
     "jest-create-mock-instance": "1.0.3",
     "jest-junit-reporter": "1.1.0",
-    "json-loader": "0.5.7",
     "ts-jest": "22.4.4",
     "ts-node": "6.0.0",
     "tslint": "5.9.1",
