Switch to external TypeUtils from es-decorator-utils

--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "homepage": "https://github.com/rraziel/es-injection",
   "bugs": "https://github.com/rraziel/es-injection/issues",
   "license": "MIT",
+  "keywords": [
+    "ecmascript",
+    "dependency",
+    "injection",
+    "typescript",
+    "decorator"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/rraziel/es-injection.git"
@@ -12,11 +19,12 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc -p .",
-    "watch": "tsc --watch -p .",
-    "test": "./node_modules/.bin/jest --watch --no-cache --verbose",
-    "coverage": "./node_modules/.bin/jest --no-cache --coverage",
-    "tslint": "tslint --project ./tsconfig.json --config ./conf/tslint.json"
+    "compile": "tsc -p .",
+    "compile:watch": "tsc --watch -p .",
+    "quality:lint": "tslint --project ./tsconfig.json --config ./conf/tslint.json",
+    "test": "jest --no-cache --verbose",
+    "test:coverage": "jest --no-cache --coverage",
+    "test:watch": "jest --watch --no-cache --verbose"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -42,6 +50,7 @@
     }
   },
   "dependencies": {
+    "es-decorator-utils": "0.1.1",
     "reflect-metadata": "0.1.12"
   },
   "devDependencies": {
