--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,17 @@ before_script:
   - greenkeeper-lockfile-update
 script:
   - npm install
-  - npm run tslint
-  - npm run build
-  - npm run coverage
+  - npm run quality:lint
+  - npm run compile
+  - npm run test:coverage
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
   - greenkeeper-lockfile-upload
+deploy:
+  provider: npm
+  email: raziel@binarygenetics.com
+  api_key: $NPM_TOKEN
+  skip_cleanup: true
+  on:
+    tags: true
+    branch: master
