--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
-    "compileOnSave": false,
     "compilerOptions": {
         "allowJs": false,
+        "alwaysStrict": true,
         "baseUrl": "src",
         "declaration": true,
         "emitDecoratorMetadata": true,
@@ -9,10 +9,11 @@
         "moduleResolution": "node",
         "module": "commonjs",
         "noImplicitAny": false,
+        "noImplicitReturns": true,
         "noImplicitThis": true,
+        "removeComments": false,
         "outDir": "./dist",
         "sourceMap": true,
-        "removeComments": false,
         "target": "es2015",
         "typeRoots": [
             "node_modules/@types"
