Updated dependencies, TypeScript version

--- a/package.json
+++ b/package.json
@@ -44,10 +44,13 @@
       "js",
       "json"
     ],
+    "reporters": [
+      "default",
+      "jest-junit"
+    ],
     "roots": [
       "<rootDir>/src"
     ],
-    "testResultsProcessor": "<rootDir>/node_modules/jest-junit-reporter",
     "testRegex": "\\.spec\\.ts",
     "transform": {
       "^.+\\.ts$": "ts-jest"
@@ -59,15 +62,15 @@
   "devDependencies": {
     "@types/jest": "24.0.11",
     "codecov": "3.2.0",
-    "jest": "23.2.0",
+    "jest": "24.5.0",
     "jest-create-mock-instance": "1.1.0",
-    "jest-junit-reporter": "1.1.0",
+    "jest-junit": "6.3.0",
+    "terser-webpack-plugin": "1.2.3",
     "ts-jest": "24.0.0",
-    "ts-loader": "4.4.1",
+    "ts-loader": "5.3.3",
     "ts-node": "8.0.3",
-    "tslint": "5.10.0",
-    "typescript": "2.9.2",
-    "uglifyjs-webpack-plugin": "2.1.2",
+    "tslint": "5.14.0",
+    "typescript": "3.3.3333",
     "webpack": "4.29.6",
     "webpack-cli": "3.2.3"
   }
