Updated AppVeyor test results upload to use the new junit.xml file name

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,7 @@ test_script:
   - npm run compile
   - npm run test:coverage
 on_finish:
-  - ps: (new-object net.webclient).UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\test-report.xml))
+  - ps: (new-object net.webclient).UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\junit.xml))
 on_success:
   - ./node_modules/.bin/codecov
 build: off
