--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   - ./cc-test-reporter before-build
   - greenkeeper-lockfile-update
 script:
-  - npm install
+  - npm ci
   - npm run quality:lint
   - npm run compile
   - npm run test:coverage
