--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,7 +5,7 @@ install:
   - ps: $env:package_version = (Get-Content -Raw -Path package.json | ConvertFrom-Json).version
   - ps: Update-AppveyorBuild -Version "$env:package_version-$env:APPVEYOR_BUILD_NUMBER"
   - yarn install --frozen-lockfile
-  - lerna bootstrap
+  - yarn run bootstrap
 test_script:
   - node --version
   - yarn --version
