--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           command: yarn install --frozen-lockfile
       - run:
           name: 'Monorepo setup'
-          command: lerna bootstrap
+          command: yarn run bootstrap
       - run:
           name: 'Lint'
           command: yarn run quality:lint
