--- a/packages/decorators/package.json
+++ b/packages/decorators/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@es-injection/decorators",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Dependency injection decorators for es-injection.",
   "homepage": "https://github.com/rraziel/es-injection",
   "bugs": "https://github.com/rraziel/es-injection/issues",
@@ -26,7 +26,7 @@
     "compile:watch": "tsc --watch -p ."
   },
   "dependencies": {
-    "@es-injection/metadata": "0.2.3"
+    "@es-injection/metadata": "^0.2.4"
   },
   "devDependencies": {
     "typescript": "3.3.3333",
