--- a/packages/decorators/package.json
+++ b/packages/decorators/package.json
@@ -16,20 +16,24 @@
     "type": "git",
     "url": "https://github.com/rraziel/es-injection.git"
   },
-  "main": "./lib/es-injection-decorators.js",
-  "types": "./lib/index.d.ts",
+  "main": "./dist/decorators.umd.js",
+  "module": "./dist/decorators.es5.js",
+  "types": "./dist/types/index.d.ts",
   "scripts": {
-    "build": "webpack --display-error-details --mode development",
-    "build:release": "webpack --display-error-details --mode production",
-    "build:watch": "webpack --display-error-details --mode development --watch",
+    "build": "rollup -c",
+    "build:watch": "rollup -c -w",
     "compile": "tsc -p .",
     "compile:watch": "tsc --watch -p ."
   },
   "dependencies": {
-    "@es-injection/metadata": "^0.2.4"
+    "@es-injection/metadata": "0.2.4"
   },
   "devDependencies": {
-    "typescript": "3.3.3333",
-    "webpack-cli": "3.3.0"
+    "rollup": "1.10.1",
+    "rollup-plugin-node-resolve": "4.2.3",
+    "rollup-plugin-sourcemaps": "0.4.2",
+    "rollup-plugin-terser": "4.0.4",
+    "rollup-plugin-typescript2": "0.21.0",
+    "typescript": "3.4.5"
   }
 }
