--- a/packages/decorators/tsconfig.json
+++ b/packages/decorators/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "extends": "../tsconfig.base.json",
     "compilerOptions": {
-        "outDir": "lib",
+        "declarationDir": "dist/types",
+        "outDir": "dist/lib",
         "rootDir": "src"
     }
 }
