--- a/packages/metadata/package.json
+++ b/packages/metadata/package.json
@@ -16,12 +16,12 @@
     "type": "git",
     "url": "https://github.com/rraziel/es-injection.git"
   },
-  "main": "./lib/es-injection-metadata.js",
-  "types": "./lib/index.d.ts",
+  "main": "./dist/metadata.umd.js",
+  "module": "./dist/metadata.es5.js",
+  "types": "./dist/types/index.d.ts",
   "scripts": {
-    "build": "webpack --display-error-details --mode development",
-    "build:release": "webpack --display-error-details --mode production",
-    "build:watch": "webpack --display-error-details --mode development --watch",
+    "build": "rollup -c",
+    "build:watch": "rollup -c -w",
     "compile": "tsc -p .",
     "compile:watch": "tsc --watch -p ."
   },
@@ -29,7 +29,11 @@
     "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
-    "typescript": "3.3.3333",
-    "webpack-cli": "3.3.0"
+    "rollup": "1.10.1",
+    "rollup-plugin-node-resolve": "4.2.3",
+    "rollup-plugin-sourcemaps": "0.4.2",
+    "rollup-plugin-terser": "4.0.4",
+    "rollup-plugin-typescript2": "0.21.0",
+    "typescript": "3.4.5"
   }
 }
