--- a/packages/metadata/tsconfig.json
+++ b/packages/metadata/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "extends": "../tsconfig.base.json",
     "compilerOptions": {
-        "outDir": "lib",
-        "rootDir": "src"
+        "declarationDir": "dist/types",
+        "outDir": "dist/lib",
+        "rootDir": "./src"
     }
 }
