--- a/packages/tsconfig.base.json
+++ b/packages/tsconfig.base.json
@@ -13,7 +13,7 @@
             "es2016",
             "es2017"
         ],
-        "module": "commonjs",
+        "module": "es2015",
         "moduleResolution": "node",
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
@@ -30,7 +30,7 @@
         ]
     },
     "exclude": [
-        "**/lib",
+        "**/dist",
         "**/node_modules",
         "**/*.spec.ts"
     ]
