--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,9 @@
 {
-    "extends": "./packages/tsconfig.base.json"
+    "extends": "./packages/tsconfig.base.json",
+    "compilerOptions": {
+        "types": [
+            "jest",
+            "reflect-metadata"
+        ]
+    }
 }
